force-app/main/default/objects/copadoconnect__Integration_Log__c/fields/copadoconnect__Copado_Integration__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Copado_Integration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Copado Integration</label>
    <referenceTo>copadoconnect__Copado_Integration__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>