force-app/main/default/objects/copadoconnect__Integration_Log__c/fields/copadoconnect__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>