force-app/main/default/objects/copadoconnect__Integration_Log__c/fields/copadoconnect__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>