force-app/main/default/objects/copadoconnect__Integration_Log__c/fields/copadoconnect__External_ID__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__External_ID__c</fullName>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>