force-app/main/default/objects/copadoconnect__Integration_Log__c/fields/copadoconnect__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>