force-app/main/default/objects/copadoconnect__Integration_Log__c/fields/copadoconnect__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>