force-app/main/default/objects/copadoconnect__Integration_Log__c/fields/copadoconnect__Result_Data__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Result_Data__c</fullName>
    <label>Result Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>