force-app/main/default/objects/copadoconnect__Integration_Log__c/listViews/copadoconnect__All.listView-meta.xml
<ListView>
    <fullName>copadoconnect__All</fullName>
    <columns>NAME</columns>
    <columns>copadoconnect__Error_Message__c</columns>
    <columns>copadoconnect__Result_Data__c</columns>
    <columns>copadoconnect__Object_Name__c</columns>
    <columns>copadoconnect__Error_Code__c</columns>
    <columns>copadoconnect__External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>